--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
 			<artifactId>jbibtex</artifactId>
 			<version>1.0.15</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>22.0</version>
+		</dependency>
 	</dependencies>
 </project>
